kubernetes/apps/default/immich/app/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: default
spec:
  serviceName: immich-postgresql
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: tensorchord/pgvecto-rs:pg14-v0.2.0
          args:
            - "postgres"
            - "-c"
            - "shared_preload_libraries=vectors.so"
            - "-c"
            - "search_path=\"$user\", public, vectors"
            - "-c"
            - "logging_collector=off" # Forces logs to show up in kubectl logs!
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: default
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
