kubernetes/apps/default/immich/app/httproute.yaml
---
# External Access
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-external
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames: ["immich.schloschi.com"]
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
---
# Internal Access
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames: ["immich.passer.internal"]
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
