kubernetes/apps/default/immich/app/immich-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-external
spec:
  parentRefs:
    - name: envoy-external  # <-- Points to external Gateway
      namespace: network
      sectionName: https
  hostnames:
    - "immich.schloschi.com" # <-- External Domain
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
