kubernetes/apps/default/immich/app/immich-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "immich.passer.internal"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
